--- a/TnTComponents/Styles/Common/_default_colors_tokens.scss
+++ b/TnTComponents/Styles/Common/_default_colors_tokens.scss
@@ -111,7 +111,7 @@ $tnt-color-on-surface-variant-light: #49454F;
 $tnt-color-inverse-surface-light: #313033;
 $tnt-color-inverse-on-surface-light: #F4EFF4;
 $tnt-color-inverse-primary-light: #D0BCFF;
-$tnt-color-shadow-light: #232323;
+$tnt-color-shadow-light: #00000022;
 $tnt-color-surface-tint-light: #6750A4;
 $tnt-color-outline-variant-light: #CAC4D0;
 $tnt-color-scrim-light: #000000;
@@ -142,7 +142,7 @@ $tnt-color-on-surface-variant-dark: #CAC4D0;
 $tnt-color-inverse-surface-dark: #E6E1E5;
 $tnt-color-inverse-on-surface-dark: #313033;
 $tnt-color-inverse-primary-dark: #6750A4;
-$tnt-color-shadow-dark: #dedede;
+$tnt-color-shadow-dark: #FFFFFF22;
 $tnt-color-surface-tint-dark: #D0BCFF;
 $tnt-color-outline-variant-dark: #49454F;
 $tnt-color-scrim-dark: #000000;
