--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -1,7 +1,7 @@
 ﻿@page "/"
 @using TnTComponents.Enum;
 @using TnTComponents.Forms
-@attribute [RenderModeServer]
+@attribute [RenderModeAuto]
 
 <TnTLayout Responsive="true">
     <TnTHeader SideBarExpanded="@_sideBarExpanded">
@@ -11,6 +11,7 @@
         <h1>
             My Title
         </h1>
+        <button @onclick="@(()=>_dark = !_dark)">Toggle</button>
 
         <h1>
             123
@@ -106,6 +107,7 @@
         @_textValue
         @_doubleValue
         @_decimalValue
+        @_dark
 
         <TnTCard CardType="CardType.Outlined">
             <TnTButton ButtonType="ButtonType.Outlined" Text="Text"></TnTButton>
@@ -131,8 +133,19 @@
 </TnTLayout>
 
 
+<HeadContent>
+    @if (_dark) {
+        <link rel="stylesheet" href="_content/TnTComponents/style.dark.css" />
+    }
+    else {
+        <link rel="stylesheet" href="_content/TnTComponents/style.light.css" />
+    }
+</HeadContent>
+
 
 @code {
+    private bool _dark = false;
+
     private bool _sideBarExpanded = false;
     private int _numberValue = 10;
     private ulong _longValue = 10;
