--- a/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
+++ b/TnTComponents.Testing/TnTComponents.Server/Components/App.razor
@@ -7,11 +7,10 @@
     <base href="/" />
     <link rel="stylesheet" href="app.css" />
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="stylesheet" href="_content/TnTComponents/style.dark.css" />
     <link rel="stylesheet" href="TnTComponents.Server.styles.css" />
     <link rel="stylesheet" href="TnTComponents.Client.styles.css" />
     <link rel="icon" type="image/png" href="favicon.png" />
-    <HeadOutlet />
+    <HeadOutlet @rendermode="@RenderMode.Auto" />
 </head>
 
 <body theme="default">
