--- a/TnTComponents/Styles/Components/_body.scss
+++ b/TnTComponents/Styles/Components/_body.scss
@@ -1,12 +1,14 @@
 ﻿.tnt-body {
    width: 100%;
+   min-height: calc(100% - 2.5rem);
    margin-left: 0;
-   //margin-top: $tnt-header-height;
    transition: width ease-in-out 150ms;
    transition: margin-left ease-in-out 150ms;
+   padding-top:4rem;
 }
 
 .tnt-body[theme=default].expanded {
    width: calc(100% - 250px);
    margin-left: 250px;
+
 }
