--- a/TnTComponents/Styles/Components/_header.scss
+++ b/TnTComponents/Styles/Components/_header.scss
@@ -11,6 +11,9 @@
    }
 
    transition: padding-left ease-in-out 150ms;
+   position: fixed;
+   width: 100%;
+   z-index: 998;
 }
 
 .tnt-header[theme=default] {
