--- a/TnTComponents/wwwroot/style.dark.css
+++ b/TnTComponents/wwwroot/style.dark.css
@@ -6,6 +6,7 @@
 /* neutral-variant */
 /* light */
 /* dark */
+@import url("https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap");
 /* display - large */
 /* display - medium */
 /* display - small */
@@ -335,11 +336,11 @@
 }
 
 .shadow {
-  background-color: #dedede;
+  background-color: rgba(255, 255, 255, 0.1333333333);
 }
 
 .shadow-text {
-  color: #dedede;
+  color: rgba(255, 255, 255, 0.1333333333);
 }
 
 .surface-tint {
@@ -371,43 +372,43 @@
 }
 
 .tnt-z-depth-1, .tnt-btn.outlined:hover, .tnt-btn.filled:hover, .tnt-btn.flat:hover, .tnt-btn, .tnt-header[theme=default] {
-  box-shadow: 0px 1px 2px rgba(69, 73, 79, 0.3), 0px 1px 3px 1px #dedede;
+  box-shadow: 0px 1px 2px rgba(69, 73, 79, 0.3), 0px 1px 3px 1px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-2, .tnt-btn:hover, .tnt-sidebar {
-  box-shadow: 0px 1px 2px rgba(69, 73, 79, 0.3), 0px 2px 6px 2px #dedede;
+  box-shadow: 0px 1px 2px rgba(69, 73, 79, 0.3), 0px 2px 6px 2px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-3, .tnt-card {
-  box-shadow: 0px 4px 8px 3px rgba(69, 73, 79, 0.15), 0px 1px 3px #dedede;
+  box-shadow: 0px 4px 8px 3px rgba(69, 73, 79, 0.15), 0px 1px 3px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-4 {
-  box-shadow: 0px 6px 10px 4px rgba(69, 73, 79, 0.15), 0px 2px 3px #dedede;
+  box-shadow: 0px 6px 10px 4px rgba(69, 73, 79, 0.15), 0px 2px 3px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-5 {
-  box-shadow: 0px 8px 12px 6px rgba(69, 73, 79, 0.15), 0px 4px 4px #dedede;
+  box-shadow: 0px 8px 12px 6px rgba(69, 73, 79, 0.15), 0px 4px 4px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-6 {
-  box-shadow: 0px 12px 16px 6px rgba(69, 73, 79, 0.15), 0px 4px 6px #dedede;
+  box-shadow: 0px 12px 16px 6px rgba(69, 73, 79, 0.15), 0px 4px 6px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-7 {
-  box-shadow: 0px 16px 20px 6px rgba(69, 73, 79, 0.15), 0px 6px 6px #dedede;
+  box-shadow: 0px 16px 20px 6px rgba(69, 73, 79, 0.15), 0px 6px 6px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-8 {
-  box-shadow: 0px 20px 24px 6px rgba(69, 73, 79, 0.15), 0px 6px 8px #dedede;
+  box-shadow: 0px 20px 24px 6px rgba(69, 73, 79, 0.15), 0px 6px 8px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-9 {
-  box-shadow: 0px 24px 28px 6px rgba(69, 73, 79, 0.15), 0px 8px 8px #dedede;
+  box-shadow: 0px 24px 28px 6px rgba(69, 73, 79, 0.15), 0px 8px 8px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-z-depth-10 {
-  box-shadow: 0px 28px 32px 6px rgba(69, 73, 79, 0.15), 0px 8px 10px #dedede;
+  box-shadow: 0px 28px 32px 6px rgba(69, 73, 79, 0.15), 0px 8px 10px rgba(255, 255, 255, 0.1333333333);
 }
 
 .tnt-border-radius-0, .tnt-form input {
@@ -1237,9 +1238,11 @@
 
 .tnt-body {
   width: 100%;
+  min-height: calc(100% - 2.5rem);
   margin-left: 0;
   transition: width ease-in-out 150ms;
   transition: margin-left ease-in-out 150ms;
+  padding-top: 4rem;
 }
 
 .tnt-body[theme=default].expanded {
@@ -1254,6 +1257,9 @@
   overflow: hidden;
   white-space: nowrap;
   transition: padding-left ease-in-out 150ms;
+  position: fixed;
+  width: 100%;
+  z-index: 998;
 }
 .tnt-header h1 {
   font-size: 2rem;
@@ -1349,10 +1355,10 @@
 
 .tnt-sidebar[theme=default] {
   width: 250px;
-  background-color: #49454F;
+  background-color: #D0BCFF;
 }
 .tnt-sidebar[theme=default] li > a {
-  color: #CAC4D0;
+  color: #381E72;
   font-size: 1.1rem;
   height: 3.25rem;
   line-height: 3.25rem;
@@ -1633,6 +1639,11 @@ body[theme=default] {
   background-color: #1C1B1F;
 }
 
-body {
+* {
+  font-family: Roboto sans-serif;
+}
+
+html, body {
   margin: 0px;
+  height: 100%;
 }
