Added ability to disable form item

--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -42,9 +42,7 @@
     <TnTBody SideBarExpanded="@_sideBarExpanded">
         <TnTForm FormType="FormType.Outlined">
             <div class="tnt-row">
-
                 <div class="tnt-col s6">
-
                     <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
 
                     <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
@@ -96,28 +94,28 @@
             <div class="tnt-col s6">
 
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTPasswordBox @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
             </div>
