--- a/TnTComponents/Styles/Components/forms/_form.scss
+++ b/TnTComponents/Styles/Components/forms/_form.scss
@@ -6,24 +6,39 @@
       color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
    }
 
-   input {
-      color: $tnt-color-on-surface;
-   }
-
    .helper-text {
-      color: $tnt-color-on-surface;
-   }
-
-   i {
       color: $tnt-color-on-surface;
    }
 
    .tnt-input-field {
       border-bottom-color: $tnt-color-outline;
 
+      i {
+         color: $tnt-color-on-surface;
+      }
+
+      input {
+         color: $tnt-color-on-surface;
+      }
 
       & > .tnt-input-field-label {
          color: $tnt-color-on-surface;
+      }
+
+      &.disabled {
+         border-bottom-color: color.adjust($tnt-color-outline, $alpha: -0.6);
+
+         i {
+            color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+         }
+
+         input {
+            color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+         }
+
+         & > .tnt-input-field-label {
+            color: color.adjust($tnt-color-on-surface, $alpha: -0.6);
+         }
       }
 
 
@@ -49,10 +64,18 @@
          & > .tnt-input-field-label {
             background-color: $tnt-color-surface;
          }
+
+         &.disabled {
+            border-color: color.adjust($tnt-color-outline, $alpha: -0.7);
+         }
       }
 
       &.filled {
          background-color: $tnt-color-surface-variant;
+
+         &.disabled {
+            background-color: color.adjust($tnt-color-surface-variant, $alpha: -0.7);
+         }
       }
    }
 }
@@ -61,22 +84,6 @@
    display: block;
    margin-top: 1rem;
    padding: .5rem;
-
-   input {
-      background-color: transparent;
-      border: none;
-      height: 2rem;
-      font-size: 1rem;
-      width: 100%;
-      box-shadow: none;
-      box-sizing: content-box;
-
-      @extend .tnt-border-radius-0;
-
-      &:focus {
-         outline: none;
-      }
-   }
 
    .tnt-input-field {
       position: relative;
@@ -88,6 +95,26 @@
       display: flex;
       flex-direction: row;
       align-items: center;
+
+      input {
+         background-color: transparent;
+         border: none;
+         height: 2rem;
+         font-size: 1rem;
+         width: 100%;
+         box-shadow: none;
+         box-sizing: content-box;
+
+         @extend .tnt-border-radius-0;
+
+         &:focus {
+            outline: none;
+         }
+      }
+
+      &.disabled:hover {
+         box-shadow: none;
+      }
 
       &:hover {
          box-shadow: 0 1px 0 0;
@@ -115,6 +142,10 @@
          border-style: solid;
          border-width: 1px;
          @extend .tnt-border-radius-1;
+
+         &.disabled:hover {
+            box-shadow: none;
+         }
 
          &:hover {
             box-shadow: 0 0 1px 1px;
