--- a/TnTComponents/Styles/Components/forms/_textbox.scss
+++ b/TnTComponents/Styles/Components/forms/_textbox.scss
@@ -10,6 +10,8 @@
          border: none;
          padding: 0;
 
+
+
          &:hover {
             background-color: #00000022;
          }
@@ -21,6 +23,10 @@
          & > i {
             font-size: 1.5rem;
          }
+      }
+
+      &.disabled:hover .tnt-password-reveal {
+         visibility: hidden;
       }
 
       &:hover .tnt-password-reveal {
