--- a/TnTComponents/wwwroot/style.light.css
+++ b/TnTComponents/wwwroot/style.light.css
@@ -411,7 +411,7 @@
   box-shadow: 0px 28px 32px 6px rgba(69, 73, 79, 0.15), 0px 8px 10px rgba(0, 0, 0, 0.1333333333);
 }
 
-.tnt-border-radius-0, .tnt-form input {
+.tnt-border-radius-0, .tnt-form .tnt-input-field input {
   border-radius: 0rem;
 }
 
@@ -1473,20 +1473,32 @@
 .tnt-form[theme=default] ::placeholder {
   color: rgba(28, 27, 31, 0.4);
 }
-.tnt-form[theme=default] input {
-  color: #1C1B1F;
-}
 .tnt-form[theme=default] .helper-text {
-  color: #1C1B1F;
-}
-.tnt-form[theme=default] i {
   color: #1C1B1F;
 }
 .tnt-form[theme=default] .tnt-input-field {
   border-bottom-color: #79747E;
 }
+.tnt-form[theme=default] .tnt-input-field i {
+  color: #1C1B1F;
+}
+.tnt-form[theme=default] .tnt-input-field input {
+  color: #1C1B1F;
+}
 .tnt-form[theme=default] .tnt-input-field > .tnt-input-field-label {
   color: #1C1B1F;
+}
+.tnt-form[theme=default] .tnt-input-field.disabled {
+  border-bottom-color: rgba(121, 116, 126, 0.4);
+}
+.tnt-form[theme=default] .tnt-input-field.disabled i {
+  color: rgba(28, 27, 31, 0.4);
+}
+.tnt-form[theme=default] .tnt-input-field.disabled input {
+  color: rgba(28, 27, 31, 0.4);
+}
+.tnt-form[theme=default] .tnt-input-field.disabled > .tnt-input-field-label {
+  color: rgba(28, 27, 31, 0.4);
 }
 .tnt-form[theme=default] .tnt-input-field.active {
   border-bottom-color: #6750A4;
@@ -1505,26 +1517,20 @@
 .tnt-form[theme=default] .tnt-input-field.outlined > .tnt-input-field-label {
   background-color: #FFFBFE;
 }
+.tnt-form[theme=default] .tnt-input-field.outlined.disabled {
+  border-color: rgba(121, 116, 126, 0.3);
+}
 .tnt-form[theme=default] .tnt-input-field.filled {
   background-color: #E7E0EC;
+}
+.tnt-form[theme=default] .tnt-input-field.filled.disabled {
+  background-color: rgba(231, 224, 236, 0.3);
 }
 
 .tnt-form {
   display: block;
   margin-top: 1rem;
   padding: 0.5rem;
-}
-.tnt-form input {
-  background-color: transparent;
-  border: none;
-  height: 2rem;
-  font-size: 1rem;
-  width: 100%;
-  box-shadow: none;
-  box-sizing: content-box;
-}
-.tnt-form input:focus {
-  outline: none;
 }
 .tnt-form .tnt-input-field {
   position: relative;
@@ -1536,6 +1542,21 @@
   display: flex;
   flex-direction: row;
   align-items: center;
+}
+.tnt-form .tnt-input-field input {
+  background-color: transparent;
+  border: none;
+  height: 2rem;
+  font-size: 1rem;
+  width: 100%;
+  box-shadow: none;
+  box-sizing: content-box;
+}
+.tnt-form .tnt-input-field input:focus {
+  outline: none;
+}
+.tnt-form .tnt-input-field.disabled:hover {
+  box-shadow: none;
 }
 .tnt-form .tnt-input-field:hover {
   box-shadow: 0 1px 0 0;
@@ -1559,6 +1580,9 @@
   border: none;
   border-style: solid;
   border-width: 1px;
+}
+.tnt-form .tnt-input-field.outlined.disabled:hover {
+  box-shadow: none;
 }
 .tnt-form .tnt-input-field.outlined:hover {
   box-shadow: 0 0 1px 1px;
@@ -1605,6 +1629,9 @@
 }
 .tnt-form .tnt-input-field .tnt-password-reveal > i {
   font-size: 1.5rem;
+}
+.tnt-form .tnt-input-field.disabled:hover .tnt-password-reveal {
+  visibility: hidden;
 }
 .tnt-form .tnt-input-field:hover .tnt-password-reveal {
   visibility: visible;
