--- a/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
+++ b/TnTComponents.Testing/TnTComponents.Client/Pages/Home.razor
@@ -43,18 +43,18 @@
         <TnTForm FormType="FormType.Outlined">
             <div class="tnt-row">
                 <div class="tnt-col s6">
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
 
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
 
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </div>
                 <div class="tnt-col s6">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
 
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </div>
             </div>
         </TnTForm>
@@ -63,29 +63,28 @@
 
             <div class="tnt-col s6">
                 <TnTForm FormType="FormType.Outlined">
-
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox AllowPasswordReveal="false" @bind-Value="_textValue" Icon="search" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox @bind-Value="_value" Icon="search" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
             </div>
         </div>
@@ -94,43 +93,36 @@
             <div class="tnt-col s6">
 
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox Disable="true" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" Placeholder="My Placeholder" />
                 </TnTForm>
             </div>
             <div class="tnt-col s6">
                 <TnTForm FormType="FormType.Outlined">
-                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Default">
-                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
                 <TnTForm FormType="FormType.Filled">
-                    <TnTPasswordBox Disable="true" AllowPasswordReveal="false" @bind-Value="_textValue" Label="My Label" HelperText="My Helper Text" />
+                    <TnTCheckbox Disable="true" @bind-Value="_value" Label="My Label" HelperText="My Helper Text" />
                 </TnTForm>
 
             </div>
         </div>
-
-        @_numberValue
-        @_longValue
-        @_textValue
-        @_doubleValue
-        @_decimalValue
-        @_dark
-
+        @_value
         <TnTCard CardType="CardType.Outlined">
-            <TnTButton ButtonType="ButtonType.Outlined" Text="Text"></TnTButton>
-            <TnTButton ButtonType="ButtonType.Flat" Text="Text"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Outlined" Text="Text" @onclick="(()=>_value = true)"></TnTButton>
+            <TnTButton ButtonType="ButtonType.Flat" Text="Text" @onclick="(()=>_value = false)"></TnTButton>
             <TnTButton ButtonType="ButtonType.Filled" Text="Text"></TnTButton>
             <TnTButton ButtonType="ButtonType.Default" Text="Text"></TnTButton>
         </TnTCard>
@@ -154,23 +146,20 @@
 
 <HeadContent>
     @if (_dark) {
-        <link rel="stylesheet" href="_content/TnTComponents/style.dark.css" />
+        <link rel="stylesheet" href="_content/TnTComponents/style.dark.min.css" />
     }
     else {
-        <link rel="stylesheet" href="_content/TnTComponents/style.light.css" />
+        <link rel="stylesheet" href="_content/TnTComponents/style.light.min.css" />
     }
 </HeadContent>
 
 
 @code {
     private bool _dark = false;
-
     private bool _sideBarExpanded = false;
-    private int _numberValue = 10;
-    private ulong _longValue = 10;
-    private double _doubleValue = 10.5;
-    private decimal _decimalValue = 9.23M;
-    private string _textValue = "Value";
+
+    private bool _value = false;
+
     public Starship? Model { get; set; }
 
 
