--- a/TnTComponents/Forms/TnTCheckbox.razor
+++ b/TnTComponents/Forms/TnTCheckbox.razor
@@ -1,7 +1,7 @@
 ﻿@inherits TnTFormField<bool>
 
 
-<div class="@GetClass()">
+<div class="@GetClass()" theme="@Theme">
     <input type="@InputType"
            disabled="@Disable"
            checked="@Value"
@@ -22,7 +22,6 @@
             @Label
         }
     </span>
-
 
 </div>
 
