--- a/TnTComponents/Styles/Components/forms/_checkbox.scss
+++ b/TnTComponents/Styles/Components/forms/_checkbox.scss
@@ -1,248 +1,244 @@
 ﻿@use "sass:color";
 
-.tnt-form[theme=default] {
-    .tnt-input-field-checkbox {
-        input[type=checkbox] {
-            + span {
-                color: $tnt-color-on-surface;
+.tnt-input-field-checkbox[theme=default] {
+    input[type=checkbox] {
+        + span {
+            color: $tnt-color-on-surface;
 
-                &:before {
-                    border: 2px solid $tnt-color-outline;
-                }
-            }
-
-            &:checked {
-                + span:before {
-                    border-bottom: 2px solid $tnt-color-primary;
-                    border-right: 2px solid $tnt-color-primary;
-                }
-            }
-        }
-
-        &.filled input[type=checkbox] {
-            &:not(:checked) + span span:after {
+            &:before {
                 border: 2px solid $tnt-color-outline;
             }
-
-            &:checked + span {
-                &:before {
-                    border-right: 2px solid $tnt-color-on-primary;
-                    border-bottom: 2px solid $tnt-color-on-primary;
-                }
-
-                span:after {
-                    background-color: $tnt-color-primary;
-                }
-            }
         }
 
-        &:not(.disabled) input[type=checkbox] + span {
-            &:hover::after {
-                background-color: #00000022;
-            }
-
-            &:active::after {
-                background-color: #00000044;
+        &:checked {
+            + span:before {
+                border-bottom: 2px solid $tnt-color-primary;
+                border-right: 2px solid $tnt-color-primary;
             }
         }
+    }
 
-        &.filled {
-            &:not(.disabled) input[type=checkbox] + span span {
-                //&:before {
-                //    content: '';
-                //    position: absolute;
-                //    top: 0;
-                //    left: 0;
-                //    width: 2rem;
-                //    height: 2rem;
-                //    background-color: transparent;
-                //    @extend .tnt-border-radius-1;
-                //}
-                //&:hover::before {
-                //    background-color: red;
-                //}
-            }
+    &.filled input[type=checkbox] {
+        &:not(:checked) + span span:after {
+            border: 2px solid $tnt-color-outline;
         }
 
-        &.disabled input[type=checkbox] {
-            + span {
-                cursor: default;
-                color: color.adjust($tnt-color-on-surface, $alpha: -.5);
-
-                &:before {
-                    border: 2px solid color.adjust($tnt-color-outline, $alpha: -.5);
-                }
+        &:checked + span {
+            &:before {
+                border-right: 2px solid $tnt-color-on-primary;
+                border-bottom: 2px solid $tnt-color-on-primary;
             }
 
-            &:checked {
-                + span:before {
-                    border-bottom: 2px solid color.adjust($tnt-color-primary, $alpha: -.5);
-                    border-right: 2px solid color.adjust($tnt-color-primary, $alpha: -.5);
-                }
+            span:after {
+                background-color: $tnt-color-primary;
             }
         }
+    }
 
-        &.disabled.filled input[type=checkbox] {
-            &:not(:checked) + span span:after {
+    &:not(.disabled) input[type=checkbox] + span {
+        &:hover::after {
+            background-color: #00000022;
+        }
+
+        &:active::after {
+            background-color: #00000044;
+        }
+    }
+
+    &.filled {
+        &:not(.disabled) input[type=checkbox] + span span {
+            //&:before {
+            //    content: '';
+            //    position: absolute;
+            //    top: 0;
+            //    left: 0;
+            //    width: 2rem;
+            //    height: 2rem;
+            //    background-color: transparent;
+            //    @extend .tnt-border-radius-1;
+            //}
+            //&:hover::before {
+            //    background-color: red;
+            //}
+        }
+    }
+
+    &.disabled input[type=checkbox] {
+        + span {
+            cursor: default;
+            color: color.adjust($tnt-color-on-surface, $alpha: -.5);
+
+            &:before {
                 border: 2px solid color.adjust($tnt-color-outline, $alpha: -.5);
             }
+        }
 
-            &:checked + span {
-                &:before {
-                    border-right: 2px solid color.adjust($tnt-color-on-primary, $alpha: -.5);
-                    border-bottom: 2px solid color.adjust($tnt-color-on-primary, $alpha: -.5);
-                }
+        &:checked {
+            + span:before {
+                border-bottom: 2px solid color.adjust($tnt-color-primary, $alpha: -.5);
+                border-right: 2px solid color.adjust($tnt-color-primary, $alpha: -.5);
+            }
+        }
+    }
 
-                span:after {
-                    background-color: color.adjust($tnt-color-primary, $alpha: -.5);
-                }
+    &.disabled.filled input[type=checkbox] {
+        &:not(:checked) + span span:after {
+            border: 2px solid color.adjust($tnt-color-outline, $alpha: -.5);
+        }
+
+        &:checked + span {
+            &:before {
+                border-right: 2px solid color.adjust($tnt-color-on-primary, $alpha: -.5);
+                border-bottom: 2px solid color.adjust($tnt-color-on-primary, $alpha: -.5);
+            }
+
+            span:after {
+                background-color: color.adjust($tnt-color-primary, $alpha: -.5);
             }
         }
     }
 }
 
-.tnt-form {
-    .tnt-input-field-checkbox {
-        display: flex;
-        align-items: center;
+.tnt-input-field-checkbox {
+    display: flex;
+    align-items: center;
 
-        input[type=checkbox] {
+    input[type=checkbox] {
+        position: absolute;
+        opacity: 0;
+        pointer-events: none;
+
+        + span {
+            position: relative;
+            padding-left: 2rem;
+            cursor: pointer;
+            font-size: 1rem;
+            user-select: none;
+            display: flex;
+            align-items: center;
+            align-content: center;
+            justify-content: center;
+            flex-direction: row;
+
+            &:before {
+                content: '';
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 1.1rem;
+                height: 1.1rem;
+                background-color: transparent;
+                @extend .tnt-border-radius-1;
+            }
+        }
+    }
+
+    &:not(.filled) input[type=checkbox] {
+        &:checked {
+            + span:before {
+                top: -.1rem;
+                left: -.4rem;
+                width: .7rem;
+                height: 1.1rem;
+                border-top: 2px solid transparent;
+                border-left: 2px solid transparent;
+                transform: rotate(40deg);
+                backface-visibility: hidden;
+                transform-origin: 100% 100%;
+            }
+        }
+
+        + span:before {
+            transition: 150ms;
+            z-index: 1;
+        }
+
+        + span:after {
+            content: '';
             position: absolute;
-            opacity: 0;
-            pointer-events: none;
+            top: -.45rem;
+            left: -.45rem;
+            width: 2.2rem;
+            height: 2.2rem;
+            z-index: 0;
+            transition: 150ms;
+            border-radius: 100%;
+        }
+    }
+
+    &.filled {
+        input[type=checkbox] {
 
             + span {
-                position: relative;
-                padding-left: 2rem;
-                cursor: pointer;
-                font-size: 1rem;
-                user-select: none;
-                display: flex;
-                align-items: center;
-                align-content: center;
-                justify-content: center;
-                flex-direction: row;
-
                 &:before {
+                    clip-path: circle(100%);
+                    transition: border 150ms, background-color 150ms, width 150ms 75ms, height 150ms 75ms, top 150ms 75ms, left 150ms 75ms;
+                    z-index: 1;
+                }
+
+                &:after {
+                    content: '';
+                    position: absolute;
+                    top: -.45rem;
+                    left: -.45rem;
+                    width: 2.2rem;
+                    height: 2.2rem;
+                    z-index: 0;
+                    transition: 150ms;
+                    border-radius: 100%;
+                }
+
+                span:after {
+                    clip-path: circle(100%);
+                    transition: border 150ms, background-color 150ms, width 150ms 75ms, height 150ms 75ms, top 150ms 75ms, left 150ms 75ms;
+                    z-index: 1;
                     content: '';
                     position: absolute;
                     top: 0;
                     left: 0;
                     width: 1.1rem;
                     height: 1.1rem;
-                    background-color: transparent;
                     @extend .tnt-border-radius-1;
                 }
             }
-        }
 
-        &:not(.filled) input[type=checkbox] {
-            &:checked {
-                + span:before {
-                    top: -.1rem;
-                    left: -.4rem;
-                    width: .7rem;
-                    height: 1.1rem;
-                    border-top: 2px solid transparent;
-                    border-left: 2px solid transparent;
-                    transform: rotate(40deg);
-                    backface-visibility: hidden;
-                    transform-origin: 100% 100%;
-                }
-            }
-
-            + span:before {
-                transition: 150ms;
-                z-index: 1;
-            }
-
-            + span:after {
-                content: '';
-                position: absolute;
-                top: -.45rem;
-                left: -.45rem;
-                width: 2.2rem;
-                height: 2.2rem;
-                z-index: 0;
-                transition: 150ms;
-                border-radius: 100%;
-            }
-        }
-
-        &.filled {
-            input[type=checkbox] {
-
+            &:not(:checked) {
                 + span {
                     &:before {
-                        clip-path: circle(100%);
-                        transition: border 150ms, background-color 150ms, width 150ms 75ms, height 150ms 75ms, top 150ms 75ms, left 150ms 75ms;
-                        z-index: 1;
-                    }
-
-                    &:after {
-                        content: '';
-                        position: absolute;
-                        top: -.45rem;
-                        left: -.45rem;
-                        width: 2.2rem;
-                        height: 2.2rem;
-                        z-index: 0;
-                        transition: 150ms;
-                        border-radius: 100%;
-                    }
-
-                    span:after {
-                        clip-path: circle(100%);
-                        transition: border 150ms, background-color 150ms, width 150ms 75ms, height 150ms 75ms, top 150ms 75ms, left 150ms 75ms;
-                        z-index: 1;
-                        content: '';
-                        position: absolute;
-                        top: 0;
-                        left: 0;
-                        width: 1.1rem;
-                        height: 1.1rem;
-                        @extend .tnt-border-radius-1;
-                    }
-                }
-
-                &:not(:checked) {
-                    + span {
-                        &:before {
-                            width: 0;
-                            height: 0;
-                            border: 3px solid transparent;
-                            left: 6px;
-                            top: 10px;
-                            transform: rotateZ(37deg);
-                            transform-origin: 100% 100%;
-                        }
-
-                        span:after {
-                            width: 1.1rem;
-                            height: 1.1rem;
-                            background-color: transparent;
-                        }
-                    }
-                }
-
-                &:checked {
-                    + span:before {
-                        width: .45rem;
-                        height: .9rem;
-                        top: .05rem;
-                        left: -.1rem;
-                        border-top: 2px solid transparent;
-                        border-left: 2px solid transparent;
-                        transform: none;
+                        width: 0;
+                        height: 0;
+                        border: 3px solid transparent;
+                        left: 6px;
+                        top: 10px;
                         transform: rotateZ(37deg);
                         transform-origin: 100% 100%;
                     }
 
-                    + span span:after {
-                        width: 1.35rem;
-                        height: 1.35rem;
-                        z-index: 0;
+                    span:after {
+                        width: 1.1rem;
+                        height: 1.1rem;
+                        background-color: transparent;
                     }
+                }
+            }
+
+            &:checked {
+                + span:before {
+                    width: .45rem;
+                    height: .9rem;
+                    top: .05rem;
+                    left: -.1rem;
+                    border-top: 2px solid transparent;
+                    border-left: 2px solid transparent;
+                    transform: none;
+                    transform: rotateZ(37deg);
+                    transform-origin: 100% 100%;
+                }
+
+                + span span:after {
+                    width: 1.35rem;
+                    height: 1.35rem;
+                    z-index: 0;
                 }
             }
         }
