--- a/TnTComponents/Styles/Components/forms/_switch.scss
+++ b/TnTComponents/Styles/Components/forms/_switch.scss
@@ -1,154 +1,150 @@
 ﻿@use "sass:color";
 
-.tnt-form[theme=default] {
-    .tnt-input-field-switch:not(.disabled) {
+.tnt-input-field-switch[theme=default]:not(.disabled) {
 
-        input[type=checkbox] {
-            + span {
-                &:before {
-                    background-color: $tnt-color-primary;
-                }
-
-                &:hover::after {
-                    background-color: #00000022;
-                }
-
-                &:active::after {
-                    background-color: #00000044;
-                }
+    input[type=checkbox] {
+        + span {
+            &:before {
+                background-color: $tnt-color-primary;
             }
 
-            &:not(:checked) {
-                + span {
-                    background-color: $tnt-color-surface;
-                }
+            &:hover::after {
+                background-color: #00000022;
             }
 
-            &:checked {
-                + span {
-                    background-color: $tnt-color-surface-variant;
-                }
+            &:active::after {
+                background-color: #00000044;
             }
         }
 
-        .tnt-input-field-switch-label {
-            color: $tnt-color-on-surface;
+        &:not(:checked) {
+            + span {
+                background-color: $tnt-color-surface;
+            }
+        }
+
+        &:checked {
+            + span {
+                background-color: $tnt-color-surface-variant;
+            }
         }
     }
 
-    .tnt-input-field-switch.disabled {
-
-        input[type=checkbox] {
-            + span {
-                &:before {
-                    background-color: color.adjust($tnt-color-primary, $alpha: -.5);
-                }
-            }
-
-            &:not(:checked) {
-                + span {
-                    background-color: color.adjust($tnt-color-surface, $alpha: -.5);
-                }
-            }
-
-            &:checked {
-                + span {
-                    background-color: color.adjust($tnt-color-surface-variant, $alpha: -.5);
-                }
-            }
-        }
-
-        .tnt-input-field-switch-label {
-            color: color.adjust($tnt-color-on-surface, $alpha: -.5);
-        }
+    .tnt-input-field-switch-label {
+        color: $tnt-color-on-surface;
     }
 }
 
-.tnt-form {
-    .tnt-input-field-switch {
-        display: flex;
-        align-items: center;
-        padding-top: 0.3rem;
-        padding-bottom: 0.3rem;
+.tnt-input-field-switch[theme=default].disabled {
 
-        input[type=checkbox] {
-            position: absolute;
-            opacity: 0;
-            pointer-events: none;
-
-            + span {
-                content: "";
-                display: flex;
-                align-items: center;
-                position: absolute;
-                border-radius: 1rem;
-                width: 2.3rem;
-                height: .9rem;
-                background-color: transparent;
-                z-index: 0;
-                transition: 150ms;
-                user-select: none;
-                cursor: pointer;
-                @extend .tnt-z-depth-1;
-
-                &:before,
-                &:after {
-                    transition: ease-in-out 150ms;
-                }
-
-                &:before {
-                    content: '';
-                    position: absolute;
-                    aspect-ratio: 1/1;
-                    height: 1.3rem;
-                    left: -0.1rem;
-                    z-index: 2;
-                    background-color: blue;
-                    border-radius: 100%;
-                    @extend .tnt-z-depth-2;
-                }
-
-                &:hover::after {
-                    content: '';
-                    position: absolute;
-                    aspect-ratio: 1/1;
-                    height: 2rem;
-                    left: -.5rem;
-                    z-index: 1;
-                    border-radius: 100%;
-                }
-            }
-
-            &:checked {
-                + span {
-
-                    &:before {
-                        left: 1.2rem;
-                    }
-
-                    &:after {
-                        left: .9rem;
-                    }
-                }
+    input[type=checkbox] {
+        + span {
+            &:before {
+                background-color: color.adjust($tnt-color-primary, $alpha: -.5);
             }
         }
 
-        .tnt-input-field-switch-label {
-            margin-left: 2.8rem;
+        &:not(:checked) {
+            + span {
+                background-color: color.adjust($tnt-color-surface, $alpha: -.5);
+            }
+        }
+
+        &:checked {
+            + span {
+                background-color: color.adjust($tnt-color-surface-variant, $alpha: -.5);
+            }
+        }
+    }
+
+    .tnt-input-field-switch-label {
+        color: color.adjust($tnt-color-on-surface, $alpha: -.5);
+    }
+}
+
+.tnt-input-field-switch {
+    display: flex;
+    align-items: center;
+    padding-top: 0.3rem;
+    padding-bottom: 0.3rem;
+    user-select: none;
+    cursor: pointer;
+
+    input[type=checkbox] {
+        position: absolute;
+        opacity: 0;
+        pointer-events: none;
+
+        + span {
+            content: "";
             display: flex;
             align-items: center;
+            position: absolute;
+            border-radius: 1rem;
+            width: 2.3rem;
+            height: .9rem;
+            background-color: transparent;
+            z-index: 0;
+            transition: 150ms;
+            @extend .tnt-z-depth-1;
+
+            &:before,
+            &:after {
+                transition: ease-in-out 150ms;
+            }
+
+            &:before {
+                content: '';
+                position: absolute;
+                aspect-ratio: 1/1;
+                height: 1.3rem;
+                left: -0.1rem;
+                z-index: 2;
+                background-color: blue;
+                border-radius: 100%;
+                @extend .tnt-z-depth-2;
+            }
+
+            &:hover::after {
+                content: '';
+                position: absolute;
+                aspect-ratio: 1/1;
+                height: 2rem;
+                left: -.5rem;
+                z-index: 1;
+                border-radius: 100%;
+            }
         }
 
-        .tnt-input-field-switch-off {
-            position: absolute;
-        }
+        &:checked {
+            + span {
 
-        .tnt-input-field-switch-on {
-            position: absolute;
+                &:before {
+                    left: 1.2rem;
+                }
+
+                &:after {
+                    left: .9rem;
+                }
+            }
         }
     }
 
-    .tnt-input-field-switch.disabled input[type=checkbox] + span {
-        cursor: default;
+    .tnt-input-field-switch-label {
+        margin-left: 2.8rem;
+        display: flex;
+        align-items: center;
     }
+
+    .tnt-input-field-switch-off {
+        position: absolute;
+    }
+
+    .tnt-input-field-switch-on {
+        position: absolute;
+    }
+}
+
+.tnt-input-field-switch.disabled input[type=checkbox] + span {
+    cursor: default;
 }
